# n-ohlcv

./: .gitignore  CONVENTIONS.md  Cargo.toml  README.md
ohlcv_db/: db  snap.0000000000041006
ohlcv_db/blobs/: 195600  264328  308404
src/: app_ui.rs  axes.rs  axes_util.rs  compress.rs  crosshair.rs  datawindow.rs  db.rs  debug_red.rs  drawing_util.rs  fetch.rs  frame.rs  gpu_backend.rs  gui.rs  hlcbars.rs  interactivegui.rs  lib.rs  main.rs  performance.rs  rsi.rs  settings.rs  timeframe.rs  volbars.rs
