[package]
name = "n-ohlcv"
version = "0.1.0"
edition = "2021"
include = ["src/**/*"]

[profile.release] #cargo run --release 
opt-level = 3  # Полная оптимизация
lto = "thin"   # Оптимизация линковки (увеличивает время компиляции, но делает бинарник быстрее)
codegen-units = 1  # Меньше параллелизма, но лучше оптимизация
panic = "abort"  # Замена panic на abort (уменьшает размер бинарника)

[profile.dev]
opt-level = 2
#opt-level = 1  # Базовая оптимизация (быстрее чем 0, но не слишком долго компилируется)
incremental = true  # Включить инкрементальную компиляцию
#codegen-units = 16  # Параллельная компиляция (быстрее, но менее оптимизировано)

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
sled = { version = "0.34.7", default-features = false }
reqwest = { version = "0.11.23", features = ["blocking", "json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = { version = "1.0.108", default-features = false }
thiserror = { version = "1.0.50", default-features = false }
bincode = "2.0.1"
xz2 = { version = "0.1.7", default-features = false }
eframe = { version = "0.31.1", features = ["wgpu"] }
egui = { version = "0.31.1", default-features = false }
#wgpu = { version = "25.0.0", default-features = false }
pollster = { version = "0.4.0", default-features = false }
#pest = "2.8.0"
#pest_derive = "2.8.0"
#lazy_static = { version = "1.4.0", default-features = false }
#anyhow = { version = "1.0.75", default-features = false }
